--- a/project.json
+++ b/project.json
@@ -15,6 +15,7 @@
         "src/resource.js",
         "src/brad01.js",
         "src/brad02.js",
+        "src/brad03.js",
         "src/app.js"
     ]
 }
