--- a/project.json
+++ b/project.json
@@ -16,6 +16,7 @@
         "src/brad01.js",
         "src/brad02.js",
         "src/brad03.js",
+        "src/brad04.js",
         "src/app.js"
     ]
 }
