--- a/project.json
+++ b/project.json
@@ -17,6 +17,7 @@
         "src/brad02.js",
         "src/brad03.js",
         "src/brad04.js",
+        "src/brad05.js",
         "src/app.js"
     ]
 }
