--- a/project.json
+++ b/project.json
@@ -18,6 +18,7 @@
         "src/brad03.js",
         "src/brad04.js",
         "src/brad05.js",
+        "src/brad06.js",
         "src/app.js"
     ]
 }
